Enhance storage (#270)
* Implement renamable single folder system

* Update Set command

* Implement NewCommand

* Update ClearCommand and NewCommand

* Implement LoadCommand

Case of AccessDeniedException has not been resolved